cmake_minimum_required(VERSION 3.22)
project(Cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cpp main.cpp 02_OOP/11_header.h 02_OOP/11_header.cpp 03_Standard_Library/001_Namespace/namespace_included.h 03_Standard_Library/001_Namespace/namespace_included.cpp 03_Standard_Library/001_Namespace/common_namespace_1.h 03_Standard_Library/001_Namespace/common_namespace_1.cpp 03_Standard_Library/001_Namespace/common_namespace_2.h 03_Standard_Library/001_Namespace/common_namespace_2.cpp)
